<resources>
    <string name="app_name">RUCafe</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="final_price">Final Price</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="finalP">Final</string>
    <string name="remove_item">Remove Item</string>
    <string name="place_order">Place Order</string>
    <string name="empty" />
    <string name="nothing_selected">$0.00</string>
    <string name="cancel_failed">Order could not be canceled</string>
    <string name="cancel_success">Order canceled</string>
    <string name="remove_failed">item could not be removed</string>
    <string name="place_order_success">Order Placed</string>
    <string name="empty_order">Order Empty</string>
    <string name="error_in_placing_order">Order not completed</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_donut">Order Donut</string>
    <string name="order_details">Order Details</string>
    <string name="store_orders">Store Orders</string>
    <string name="textView">TextView</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="addins_label">Addins:</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="quantity_label">quantity</string>
    <string name="venti">Venti</string>
    <string name="grande">Grande</string>
    <string name="tall">Tall</string>
    <string name="short_label">Short</string>
    <string name="order">Order</string>
    <string name="coffee">Coffee</string>
    <string name="select_size">Please select coffee size</string>
    <string name="invalid_int">Invalid integer!</string>
    <string name="added">\" added\"</string>
    <string name="nonzero_int">Please enter nonzero integer</string>
    <string name="enter_quantity">Please enter quantity</string>
    <string name="reset" />
    <string name="dollar">$</string>
    <string name="donuts">Donuts</string>
    <string name="blueberry">Blueberry</string>
    <string name="pumpSpice">Pumpkin Spice</string>
    <string name="powder">Powdered</string>
    <string name="glaze">Glazed</string>
    <string name="frost">Frosted</string>
    <string name="jelly">Jelly</string>
    <string name="Bdaycake">Birthday Cake</string>
    <string name="none">none</string>
    <string name="space">\" \"</string>
    <string name="comma">\", \"</string>
    <string name="coffee_size">\"Coffee:: Size: \"</string>
    <string name="seperator">\" :: \"</string>
    <string name="addins_string">\"Addins: \"</string>
    <string name="quantity_string">\"Quantity: \"</string>
    <string name="donut_flavor">\"Donut:: Flavor: \"</string>
    <string name="item_not_selected">No Item Selected</string>
</resources>